# test-dep-ci-v2

./: pyproject.toml
.github/workflows/: deploy.yml
