[tool.poetry]
name = "test-dep-ci-v2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "test_dep_ci_v1"}]

[tool.poetry.dependencies]
python = "^3.11"

test-dep-ci-v1 = { git = "ssh://git@github.com/IamAbbey/test-dep-ci-v1.git", rev = "2a859e1cf0ae0316ae3365efa6891321a90806ee" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
