[tool.poetry]
name = "test-dep-ci-v2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.11"

test-dep-ci-v1 = { git = "https://github.com/IamAbbey/test-dep-ci-v1.git", rev = "301626e7dfcace63ecf404ee9acce3e40051b931" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
